--- a/css/cover.css
+++ b/css/cover.css
@@ -28,7 +28,7 @@ html,
 body {
   height: 100%;
   background-color: #333;
-  background-image: url("../images/ZQQFI42Z4Y.jpg");
+  background-image: url("../images/EQPXZNZ9BA.jpg");
   background-size: 2100px 1400px;
   background-position: center; 
 }
